--- a/fotobook/app/assets/stylesheets/photo.css.scss
+++ b/fotobook/app/assets/stylesheets/photo.css.scss
@@ -10,9 +10,12 @@ margin: 0;
 .menuxx{
 	border-radius: 10px !important;
 }
+.menuxx1{
+	border-radius: 10px !important;
+	}
 .image{
 	width: 124px;
     height: 117px;
-  	margin:20px;
+  	margin:15px;
   	border-radius: 10px
 }
