--- a/fotobook/app/views/layouts/_nav.html.erb
+++ b/fotobook/app/views/layouts/_nav.html.erb
@@ -1,27 +1,33 @@
 <!--NAV-->
 <div>
-	<nav class="navbar navbar-dark fixed-top navbar-expand-md navbar-no-bg">
-		<div class="container">
-			<a class="navbar-brand" href="#">Fotobook</a>
-			<form class="form-inline">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search Photo/Album" aria-label="Search">
-			</form>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> 
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto" >
-					<li lass="nav-item "> 
-						<img src="/assets/img0.jpg" class="rounded-circle" alt="icon-acount"></li>
-						<li class="nav-item active">
-							<a class="nav-link scroll-link" href="#">Tai-Anh</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link scroll-link text-light" href="#@@">Logout</a>
-							
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</div>
+  <nav class="navbar navbar-dark fixed-top navbar-expand-md navbar-no-bg">
+    <div class="container">
+      <a class="navbar-brand" href="#">Fotobook</a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search Photo/Album" aria-label="Search">
+      </form>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> 
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto" >
+                      <% if current_user %>
+
+          <li lass="nav-item "> 
+            <img src="/assets/img0.jpg" class="rounded-circle" alt="icon-acount"></li>
+            
+            <li class="nav-item active">
+              <%= link_to "#{current_user.username}" ,user_path(current_user), {class: "nav-link scroll-link"} %>
+            </li>
+          
+            <li class="nav-item">
+             <!--  <a class="nav-link scroll-link text-light" href="#@@">Logout</a> -->
+                          <%= link_to "Log Out"  , logout_path , {class: "nav-link scroll-link text-light"} %>
+
+           </li>
+             <% end %>
+         </ul>
+       </div>
+     </div>
+   </nav>
+ </div>
