--- a/fotobook/app/views/users/edit.html.erb
+++ b/fotobook/app/views/users/edit.html.erb
@@ -1,6 +1,113 @@
-<h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+
+<div class="container-fluid">
+  <div class="row bg-white">
+    <div class="col-sm-3 col-lg-2">
+      <ul class="nav flex-column ml-sm-5">
+        <li class="nav-item">
+          <a onclick="openTab(event, 'PHOTO')"class="nav-link menu"  href="#"><b>Feeds</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link menu" href="./discover.html"><b>Discover</b></a>
+        </li>
+
+      </ul>
+    </div>
+
+    <div class="col-sm-8 col-lg-9" style="background-color: white">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h5 class="pt-4">Edit User Profile</h5>
+            <hr>
+
+            <!------------------FORM----------------------------->
+            <form class="pl-5 ml-lg-5" method="POST" action="updateProfile">
+              <div class="form-group row">
+                <div class="col-md-3"></div>
+                <div class="col-md-5" style="  height: 210px;">
+                  <div class="input-file-container" style="display: block;">
+                    <img class="rounded-lg" src="/assets/img7.jpg" width="200px" height="200px" style="position: absolute; z-index: 0;" id="image" >
+                    <input class="input-file" id="my-file" type="file" style="position: absolute; z-index: 1; margin-top: 160px;" onchange="showImage.call(this);">
+                    <label tabindex="0" for="my-file" class="input-file-trigger">CHANGE</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-md-3"></div>
+                <div class="col-md-5">
+                  <h4 class="text-primary">Basic information</h4>
+                </div>
+              </div>
+              <!--Require of Rails -->
+              <input name="utf8" type="hidden" value="&#x2713;" />
+              <input type="hidden" name="authenticity_token" value="lSt...hbIg==" />
+
+
+              <div class="form-group row">
+                <label for="editFirstName" class="col-md-3 col-form-label d-flex justify-content-end"><b>First name</b></label>
+                <div class="col-md-5">
+                  <input type="text" name="User[username]" class="form-control" id="editFirstName" placeholder="First Name">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="editLastName" class="col-md-3 col-form-label d-flex justify-content-end"><b>Last name</b></label>
+                <div class="col-md-5">
+                  <input type="text" class="form-control" id="editLastName" placeholder="Last Name">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="editEmail" class="col-md-3 col-form-label d-flex justify-content-end"><b>Email</b></label>
+                <div class="col-md-5">
+                  <input type="Email" name="User[email]" class="form-control" id="editEmail" placeholder="someone@example.com">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-md-3"></div>
+                <div class="col-md-5">
+                  <button type="submit" action="submit" class="btn btn-success">Save</button>
+                </div>
+              </div>
+            </form>
+
+            <form class="pl-5 ml-lg-5">
+              <div class="form-group row">
+                <div class="col-md-3"></div>
+                <div class="col-md-5">
+                  <h4 class="text-primary">Change password</h4>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <label for="currentPsw" class="col-md-3 col-form-label d-flex justify-content-end"><b>Current Password</b></label>
+                <div class="col-md-5">
+                  <input type="password" name="pwd" class="form-control" id="currentPsw" placeholder="**********">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="newPsw" class="col-md-3 col-form-label d-flex justify-content-end"><b>New Password</b></label>
+                <div class="col-md-5">
+                  <input type="password" name="pwd" class="form-control" id="newPsw" placeholder="**********">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="verifyPsw" class="col-md-3 col-form-label d-flex justify-content-end"><b>Verify Password</b></label>
+                <div class="col-md-5">
+                  <input type="password" name="pwd" class="form-control" id="verifyPsw" placeholder="**********">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-md-3"></div>
+                <div class="col-md-5">
+                  <button type="submit" class="btn btn-success">Save</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
