em làm thêm trang album,thêm ảnh vào

--- a/fotobook/app/views/layouts/_nav.html.erb
+++ b/fotobook/app/views/layouts/_nav.html.erb
@@ -2,7 +2,8 @@
 <div>
   <nav class="navbar navbar-dark fixed-top navbar-expand-md navbar-no-bg">
     <div class="container">
-      <a class="navbar-brand" href="#">Fotobook</a>
+            <%= link_to "Fotobook",  root_path,{class: "navbar-brand"} %>
+<!--       <a class="navbar-brand" href="#">Fotobook</a> -->
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search Photo/Album" aria-label="Search">
       </form>
