--- a/fotobook/app/views/users/show.html.erb
+++ b/fotobook/app/views/users/show.html.erb
@@ -42,7 +42,7 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-end">
-					<button class="btn btn-success menuxx1">Add Album</button>
+					<button class="btn btn-success menuxx1"><%= link_to "Add Album", newalbum_path   %></button>
 					<!-- <button class="btn btn-danger">Add Album</button> -->
 									
 		
